# simple-pico-terminal

./: CMakeLists.txt  README.md  main.c
